Fixed spacing of buttons

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -29,6 +29,7 @@
 }
 
 .header .right-header .right-button {
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
+    margin-left: 1.5vw;
+    margin-right: 1.5vw;
+    font-weight: 650;
 }
